@@ -1,3 +1,4 @@
+* Add final state and rename done into waiting
 * Remove support for Python 2.7
 
 Version 4.8.0 - 2018-04-23
